force-app/main/default/objects/Weekly_Product_Sales__c/Weekly_Product_Sales__c.object-meta.xml
<CustomObject>
    <description>Daily/weekly product-level sales data - 週間単品売上</description>
    <label>週間単品売上</label>
    <nameField>
        <displayFormat>PS-{0000000}</displayFormat>
        <label>売上番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>週間単品売上</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>