force-app/main/default/objects/Weekly_Product_Sales__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>アラート種別</label>
    <length>255</length>
    <type>Text</type>
    <inlineHelpText>複数のアラート種別をカンマ区切りで格納</inlineHelpText>
</CustomField>