force-app/main/default/objects/Weekly_Product_Sales__c/fields/Amount_PI__c.field-meta.xml
<CustomField>
    <fullName>Amount_PI__c</fullName>
    <label>金額PI</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>