force-app/main/default/objects/Weekly_Product_Sales__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>区分</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>