force-app/main/default/objects/Weekly_Product_Sales__c/fields/Composition_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Composition_Ratio__c</fullName>
    <label>構成比</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>