force-app/main/default/objects/Weekly_Product_Sales__c/fields/Customer_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Count__c</fullName>
    <label>客数</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>