force-app/main/default/objects/Weekly_Product_Sales__c/fields/Daily_Sales_Qty__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales_Qty__c</fullName>
    <label>日販数</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>