force-app/main/default/objects/Weekly_Product_Sales__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>部門</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>週間単品売上</relationshipLabel>
    <relationshipName>Weekly_Product_Sales</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>