force-app/main/default/objects/Weekly_Product_Sales__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>値引額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>