force-app/main/default/objects/Weekly_Product_Sales__c/fields/Discount_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Discount_Quantity__c</fullName>
    <label>値引数</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>