force-app/main/default/objects/Weekly_Product_Sales__c/fields/Has_Alert__c.field-meta.xml
<CustomField>
    <fullName>Has_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>アラート有</label>
    <type>Checkbox</type>
</CustomField>