force-app/main/default/objects/Weekly_Product_Sales__c/fields/Loss_Rate__c.field-meta.xml
<CustomField>
    <fullName>Loss_Rate__c</fullName>
    <label>ロス率</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>