force-app/main/default/objects/Weekly_Product_Sales__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>期間</label>
    <length>100</length>
    <type>Text</type>
</CustomField>