force-app/main/default/objects/Weekly_Product_Sales__c/fields/Prior_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Amount__c</fullName>
    <label>前年金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>