force-app/main/default/objects/Weekly_Product_Sales__c/fields/Prior_Year_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Date__c</fullName>
    <label>前年日付</label>
    <type>Date</type>
</CustomField>