force-app/main/default/objects/Weekly_Product_Sales__c/fields/Prior_Year_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Quantity__c</fullName>
    <label>前年数量</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>