force-app/main/default/objects/Weekly_Product_Sales__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>商品</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>週間単品売上</relationshipLabel>
    <relationshipName>Weekly_Product_Sales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>