force-app/main/default/objects/Weekly_Product_Sales__c/fields/Quantity_PI__c.field-meta.xml
<CustomField>
    <fullName>Quantity_PI__c</fullName>
    <label>数量PI</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>