force-app/main/default/objects/Weekly_Product_Sales__c/fields/Unit_Price_Without_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Without_Tax__c</fullName>
    <label>抜単</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>