force-app/main/default/objects/Weekly_Product_Sales__c/fields/Waste_Amount__c.field-meta.xml
<CustomField>
    <fullName>Waste_Amount__c</fullName>
    <label>廃棄額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>