force-app/main/default/objects/Weekly_Product_Sales__c/fields/Waste_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Waste_Quantity__c</fullName>
    <label>廃棄数</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>