force-app/main/default/objects/Weekly_Product_Sales__c/fields/YoY_Ratio__c.field-meta.xml
<CustomField>
    <fullName>YoY_Ratio__c</fullName>
    <label>前年比</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>